# ostinote

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  mise.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
ostinote/: __init__.py  __main__.py  cli.py  config.py  costs.py  doctor.py  env.py  hooks.py  install.py  pipeline.py  prompts.py  state.py  summarize.py  tzutil.py
ostinote/agents/: __init__.py  base.py  claude.py  codex.py
ostinote/assets/: SKILL.md  codex-prompt.md
ostinote/prompts/: compress-daily.prompt.txt  consolidate-staging.prompt.txt  save-session.prompt.txt
tests/: conftest.py  helpers.py  test_agents.py  test_cli.py  test_costs.py  test_formatting.py  test_functional_cli.py  test_hooks.py  test_install.py  test_install_hooks_cli.py  test_ostinote.py  test_pipeline.py  test_prompts.py  test_state_config.py  test_summarize.py
