[project]
name = "ostinote"
version = "1.0.0"
description = "Continuous memory for coding agents — Claude Code and Codex CLI, one shared memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.md"]
authors = [
    { name = "Adrien Kohlbecker", email = "adrien.kohlbecker@gmail.com" },
]
keywords = ["claude-code", "codex", "coding-agents", "memory", "llm", "hooks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/adrienkohlbecker/ostinote"
Repository = "https://github.com/adrienkohlbecker/ostinote"
Issues = "https://github.com/adrienkohlbecker/ostinote/issues"

[project.scripts]
ostinote = "ostinote.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
# >=77 needed for PEP 639 SPDX license expression / license-files
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ostinote*"]

[tool.setuptools.package-data]
ostinote = ["prompts/*.txt", "assets/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
    "UP", # pyupgrade
]
ignore = [
    "UP031", # printf-style formatting — used deliberately throughout
]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "9.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
# Dump thread tracebacks if a test (e.g. a stdin-blocked subprocess) hangs.
faulthandler_timeout = 120
tmp_path_retention_policy = "failed"
